--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">HealthyShares</string>
+    <string name="log_tracker">Log Tracker</string>
+    <string name="home">Home</string>
+    <string name="add">Add</string>
+    <string name="add_email">add_email</string>
 </resources>
